--- a/arch-desktop/.config/hypr/hyprland.conf
+++ b/arch-desktop/.config/hypr/hyprland.conf
@@ -44,7 +44,8 @@ $menu = wofi --show drun
 ### AUTOSTART ###
 #################
 #
-exec-once = ~/dotfiles/waybar/launch.sh
+exec-once = ~/.scripts/waybar/start_waybar.sh
+exec-once = hyprpaper
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
