--- a/arch-desktop/.config/hypr/hyprland.conf
+++ b/arch-desktop/.config/hypr/hyprland.conf
@@ -24,7 +24,13 @@ cursor {
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+
+# Front screen
+monitor=DP-1, 2560x1440@144, 2560x0, 1, vrr, 1
+
+# Side screen
+monitor=DP-3, 2560x1440@144, 0x0, 1
+
 
 
 ###################
@@ -45,7 +51,7 @@ $menu = wofi --show drun
 #################
 #
 exec-once = ~/.scripts/waybar/start_waybar.sh
-exec-once = hyprpaper
+exec-once = waypaper --restore
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
@@ -194,7 +200,7 @@ bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, ESCAPE, killactive,
 # bind = $mainMod, M, exit,
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, L, exec, hyprlock --immediate
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, V, togglefloating,
@@ -246,6 +252,18 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+
+
+# Volume and Media Control
+bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 
+bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
+bind = , XF86AudioMicMute, exec, pamixer --default-source -m
+bind = , XF86AudioMute, exec, pamixer -t
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioPause, exec, playerctl play-pause
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous
 
 
 ##############################
