--- a/arch-desktop/.config/hypr/hyprland.conf
+++ b/arch-desktop/.config/hypr/hyprland.conf
@@ -256,7 +256,8 @@ bindm = $mainMod, mouse:273, resizewindow
 
 
 # Volume and Media Control
-bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 
+# XF86Audio[Rase/Lower]Volume binds to keyboard knob
+bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
 bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
 bind = , XF86AudioMicMute, exec, pamixer --default-source -m
 bind = , XF86AudioMute, exec, pamixer -t
