update readme + nvim changes + hypr changes

--- a/arch-desktop/.config/hypr/hyprland.conf
+++ b/arch-desktop/.config/hypr/hyprland.conf
@@ -29,7 +29,7 @@ cursor {
 monitor=DP-1, 2560x1440@144, 2560x0, 1, vrr, 1
 
 # Side screen
-monitor=DP-3, 2560x1440@144, 0x0, 1
+monitor=DP-2, 2560x1440@144, 0x0, 1
 
 
 
@@ -52,6 +52,7 @@ $menu = wofi --show drun
 #
 exec-once = ~/.scripts/waybar/start_waybar.sh
 exec-once = waypaper --restore
+exec-once = hyperidle
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
@@ -265,6 +266,9 @@ bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioPause, exec, playerctl play-pause
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
+
+# Screenshot
+bind = $mainMod, H, exec, hyprshot -m region
 
 
 ##############################
