--- a/arch-desktop/.config/kitty/kitty.conf
+++ b/arch-desktop/.config/kitty/kitty.conf
@@ -13,3 +13,5 @@ tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows >
 font_size 14
 
 update_check_interval 0
+
+background_opacity 0.9
